Fixed z-index for main logo

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -162,7 +162,7 @@
       width: 43px;
       height: 43px;
       cursor: pointer;
-      z-index: 10;
+      z-index: 17;
     }
 
     span {
